--- a/templates/cards/list.html
+++ b/templates/cards/list.html
@@ -32,9 +32,15 @@
                             <div class="col-10">
 
                                 <h4>{{ card.name }}</h4>
-                                <p class="fs-5">
-                                    ({{ card.mana }})
-                                    {% if card.attack %}{{ card.attack }}/{{ card.health }}{% endif %}</p>
+                                {% if card.attack and card.health %}
+                                    <h5>({{ card.mana }})
+                                        маны, {{ card.attack }}/{{ card.health }}</h5>
+                                {% elif card.health %}
+                                    <h5>({{ card.mana }})
+                                        маны, {{ card.health }} здоровья</h5>
+                                {% else %}
+                                    <h5>({{ card.mana }}) маны.</h5>
+                                {% endif %}
                                 <p class="fs-6">{{ card.text }}</p>
 
                                 <a class="btn btn-outline-secondary"
